--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,9 +34,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  hooks_riverpod: ^1.0.0-dev.11
-  freezed: ^0.15.0+1
-  freezed_annotation: ^0.15.0
+  hooks_riverpod: ^1.0.3
+  freezed: ^1.1.1
+  freezed_annotation: ^1.1.0
   json_serializable: ^6.0.1
   json_annotation: ^4.3.0
 
